Error de agregar experiencia corregido